# tauri-plugin-fors-camera

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
android/: build.gradle.kts
android/src/main/java/: ForsCameraPlugin.kt
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: take_photo.toml
permissions/schemas/: schema.json
src/: error.rs  lib.rs
