[package]
name = "tauri-plugin-fors-camera"
version = "0.1.0"
edition = "2021"
description = "Camera and gallery capture for Tauri mobile with JPEG resize"
license = "MIT OR Apache-2.0"
repository = "https://github.com/giraudsa/tauri-plugin-fors-camera"
links = "tauri-plugin-fors-camera"

[lib]
name = "tauri_plugin_fors_camera"
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }